# messenger001-aiogram

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: echo_bot.py
src/messenger001_aiogram/: __init__.py  bot.py  client.py  dispatcher.py  enums.py  exceptions.py  filters.py  fsm.py  keyboards.py  middleware.py  types.py  webhook.py
